--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "yahootuninggroupsultimatebackup",
   "version": "1.0.0",
   "scripts": {
+    "setup": "npm i",
     "start": "node server.js",
     "parse": "node --max-old-space-size=8192 parser.js",
     "transfer": "cp -r dist/** ../YahooTuningGroupsUltimateBackup.github.io/"
   },
   "devDependencies": {
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "he": "^1.2.0",
-    "mailparser": "^2.7.7"
+    "mailparser": "^3.5.0"
   }
 }
